[package]
name = "trin-canonical-indices"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ethereum/trin/tree/master/trin-canonical-indices"
license = "GPL-3.0"
readme = "README.md"
keywords = ["ethereum", "portal-network"]
categories = ["cryptography::cryptocurrencies"]
description = "Canonical transaction index network subprotocol for Trin."
authors = ["https://github.com/ethereum/trin/graphs/contributors"]

[dependencies]
anyhow = "1.0.68"
async-trait = "0.1.53"
discv5 = { git = "https://github.com/njgheorghita/discv5.git", rev = "700bdb97afd87016222e902f844bb95eb0d78d99", features = ["serde"] }
eth_trie = "0.3.0"
eth2_ssz = "0.4.0"
ethereum-types = "0.12.1"
ethportal-api = {path = "../ethportal-api"}
keccak-hash = "0.8.0"
parking_lot = "0.11.2"
portalnet = { path = "../portalnet" }
rlp = "0.5.0"
serde_json = "1.0.89"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.36"
tree_hash = "0.4.0"
trin-utils = { path = "../trin-utils" }
trin-validation = { path = "../trin-validation" }
utp-rs = "0.1.0-alpha.7"

[dev-dependencies]
env_logger = "0.9.0"
eth2_ssz_types = "0.2.1"
httpmock = "0.6.6"
rstest = "0.18.2"
test-log = { version = "0.2.11", features = ["trace"] }
tracing-subscriber = "0.3.15"
ureq = { version = "2.5.0", features = ["json"] }
